--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && set PORT=3006 && react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",   
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
