--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@mui/material": "^5.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "set PORT=3006 && react-scripts start",   
+    "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
